@@ -1,8 +1,8 @@
 package se.skltp.takcache;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static se.skltp.takcache.TakCacheLog.RefreshStatus.REFRESH_OK;
 import static se.skltp.takcache.TakCacheLog.RefreshStatus.RESTORED_FROM_LOCAL_CACHE;
 import static se.skltp.takcache.TakCacheLog.RefreshStatus.REUSING_EXISTING_CACHE;
@@ -16,37 +16,29 @@ import static se.skltp.takcache.util.TestTakDataDefines.RIV21;
 import static se.skltp.takcache.util.TestTakDataDefines.SENDER_1;
 import static se.skltp.takcache.util.TestTakDataDefines.SENDER_3;
 
-import java.io.FileReader;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import org.custommonkey.xmlunit.XMLAssert;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.TemporaryFolder;
-import org.junit.runner.RunWith;
+import java.nio.file.Path;
+import java.util.*;
+
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
-import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
-import org.xml.sax.InputSource;
-import se.skltp.tak.vagvalsinfo.wsdl.v2.AnropsBehorighetsInfoType;
-import se.skltp.tak.vagvalsinfo.wsdl.v2.VirtualiseringsInfoType;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.test.context.junit.jupiter.SpringJUnitConfig;
+import org.xmlunit.assertj.XmlAssert;
 import se.skltp.takcache.exceptions.TakServiceException;
 import se.skltp.takcache.services.TakService;
 import se.skltp.takcache.util.VagvalSchemasTestListsUtil;
 
-@RunWith(SpringJUnit4ClassRunner.class)
-@ContextConfiguration("classpath*:spring-context.xml")
-public class TakCacheTest {
+@SpringJUnitConfig(locations = "classpath*:spring-context.xml")
+@ExtendWith(MockitoExtension.class)
+class TakCacheTest {
 
-  @Rule
-  public TemporaryFolder testFolder = new TemporaryFolder();
+  @TempDir
+  Path testFolder;
 
   @Mock
   TakService takService;
@@ -60,14 +52,8 @@ public class TakCacheTest {
   @InjectMocks
   BehorigheterCacheImpl behorighetCache;
 
-  @BeforeClass
-  public static void beforeClass() {
-
-  }
-
-  @Before
-  public void beforeTest() {
-    MockitoAnnotations.openMocks(this);
+  @BeforeEach
+  void beforeTest() {
 
     // Reset internal cache between tests
     takCache.resetCache();
@@ -75,7 +61,7 @@ public class TakCacheTest {
   }
 
   @Test
-  public void simpleSuccessfulRefreshTest() throws Exception {
+  void simpleSuccessfulRefreshTest() throws Exception {
     mockTakServiceDefaultValues();
     TakCacheLog takCacheLog = takCache.refresh();
 
@@ -85,107 +71,95 @@ public class TakCacheTest {
     assertEquals(5, takCacheLog.getNumberVagval());
   }
 
-//  @Test
-//  public void simpleSuccessfulRefreshTest() throws Exception {
-//    mockTakServiceDefaultValues();
-//    TakCacheLog takCacheLog = takCache.refresh();
-//
-//    assertTrue(takCacheLog.isRefreshSuccessful());
-//    assertEquals(REFRESH_OK, takCacheLog.getRefreshStatus());
-//    assertEquals(5, takCacheLog.getNumberBehorigheter());
-//    assertEquals(5, takCacheLog.getNumberVagval());
-//  }
-
-
   @Test
-  public void simpleBehorighetTest() throws Exception {
+  void simpleBehorighetTest() throws Exception {
     mockTakServiceDefaultValues();
-    assertTrue(takCache.isAuthorized(SENDER_1, NAMNRYMD_1, RECEIVER_1));
-    assertTrue(takCache.isAuthorized(SENDER_1, NAMNRYMD_2, RECEIVER_1));
-    assertFalse(takCache.isAuthorized(SENDER_3, NAMNRYMD_1, RECEIVER_1));
+    assertTrue(takCache.getBehorigeterCache().isAuthorized(SENDER_1, NAMNRYMD_1, RECEIVER_1));
+    assertTrue(takCache.getBehorigeterCache().isAuthorized(SENDER_1, NAMNRYMD_2, RECEIVER_1));
+    assertFalse(takCache.getBehorigeterCache().isAuthorized(SENDER_3, NAMNRYMD_1, RECEIVER_1));
   }
 
   @Test
-  public void filterShouldRemoveNotMatchingBehorighetTest() throws Exception {
+  void filterShouldRemoveNotMatchingBehorighetTest() throws Exception {
     mockTakServiceDefaultValues();
 
-    TakCacheLog takCacheLog = takCache.refresh(Arrays.asList(NAMNRYMD_1));
+    TakCacheLog takCacheLog = takCache.refresh(List.of(NAMNRYMD_1));
     assertEquals(4, takCacheLog.getNumberBehorigheter());
-    assertTrue(takCache.isAuthorized(SENDER_1, NAMNRYMD_1, RECEIVER_1));
-    assertFalse(takCache.isAuthorized(SENDER_1, NAMNRYMD_2, RECEIVER_1));
+    assertTrue(takCache.getBehorigeterCache().isAuthorized(SENDER_1, NAMNRYMD_1, RECEIVER_1));
+    assertFalse(takCache.getBehorigeterCache().isAuthorized(SENDER_1, NAMNRYMD_2, RECEIVER_1));
   }
 
 
   @Test
-  public void simpleRoutingInfoTest() throws Exception {
+  void simpleRoutingInfoTest() throws Exception {
     mockTakServiceDefaultValues();
-    assertEquals(0, takCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_1).size());
-    assertEquals(1, takCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_2).size());
-    assertEquals(2, takCache.getRoutingInfo(NAMNRYMD_2, RECEIVER_2).size());
+    assertEquals(0, takCache.getVagvalCache().getRoutingInfo(NAMNRYMD_1, RECEIVER_1).size());
+    assertEquals(1, takCache.getVagvalCache().getRoutingInfo(NAMNRYMD_1, RECEIVER_2).size());
+    assertEquals(2, takCache.getVagvalCache().getRoutingInfo(NAMNRYMD_2, RECEIVER_2).size());
   }
 
   @Test
-  public void routingInfoValuesShouldExistTest() throws Exception {
+  void routingInfoValuesShouldExistTest() throws Exception {
     mockTakServiceDefaultValues();
-    List<RoutingInfo> routingInfoList = takCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_2);
+    List<RoutingInfo> routingInfoList = takCache.getVagvalCache().getRoutingInfo(NAMNRYMD_1, RECEIVER_2);
     assertEquals(1, routingInfoList.size());
-    assertEquals(ADDRESS_1, routingInfoList.get(0).getAddress());
-    assertEquals(RIV21, routingInfoList.get(0).getRivProfile());
+    assertEquals(ADDRESS_1, routingInfoList.getFirst().getAddress());
+    assertEquals(RIV21, routingInfoList.getFirst().getRivProfile());
   }
 
   @Test
-  public void simpleRoutingAddressTest() throws Exception {
+  void simpleRoutingAddressTest() throws Exception {
     mockTakServiceDefaultValues();
-    assertEquals(ADDRESS_1, takCache.getRoutingAddress(NAMNRYMD_1, RECEIVER_2, RIV21));
-    assertEquals(ADDRESS_1, takCache.getRoutingAddress(NAMNRYMD_2, RECEIVER_2, RIV20));
+    assertEquals(ADDRESS_1, takCache.getVagvalCache().getRoutingAddress(NAMNRYMD_1, RECEIVER_2, RIV21));
+    assertEquals(ADDRESS_1, takCache.getVagvalCache().getRoutingAddress(NAMNRYMD_2, RECEIVER_2, RIV20));
   }
 
   @Test
-  public void filterShouldRemoveNotMatchingNamespaceInVagvalTest() throws Exception {
+  void filterShouldRemoveNotMatchingNamespaceInVagvalTest() throws Exception {
     mockTakServiceDefaultValues();
-    TakCacheLog takCacheLog = takCache.refresh(Arrays.asList(NAMNRYMD_1));
+    TakCacheLog takCacheLog = takCache.refresh(List.of(NAMNRYMD_1));
     assertEquals(REFRESH_OK, takCacheLog.getRefreshStatus());
     assertEquals(3, takCacheLog.getNumberVagval());
-    assertEquals(0, takCache.getRoutingInfo(NAMNRYMD_2, RECEIVER_2).size());
+    assertEquals(0, takCache.getVagvalCache().getRoutingInfo(NAMNRYMD_2, RECEIVER_2).size());
   }
 
   @Test
-  public void filterShouldNotEffectRemainingVagvalTest() throws Exception {
+  void filterShouldNotEffectRemainingVagvalTest() throws Exception {
     mockTakServiceDefaultValues();
 
-    TakCacheLog takCacheLog = takCache.refresh(Arrays.asList(NAMNRYMD_1));
+    takCache.refresh(List.of(NAMNRYMD_1));
 
-    assertEquals(0, takCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_1).size());
-    assertEquals(1, takCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_2).size());
-    assertEquals(ADDRESS_1, takCache.getRoutingAddress(NAMNRYMD_1, RECEIVER_2, RIV21));
+    assertEquals(0, takCache.getVagvalCache().getRoutingInfo(NAMNRYMD_1, RECEIVER_1).size());
+    assertEquals(1, takCache.getVagvalCache().getRoutingInfo(NAMNRYMD_1, RECEIVER_2).size());
+    assertEquals(ADDRESS_1, takCache.getVagvalCache().getRoutingAddress(NAMNRYMD_1, RECEIVER_2, RIV21));
   }
 
   @Test
-  public void noVagvalFromTakShouldGiveEmptyLisOfRoutingInfosTest() throws Exception {
+  void noVagvalFromTakShouldGiveEmptyLisOfRoutingInfosTest() throws Exception {
     Mockito.when(takService.getVirtualiseringar())
-        .thenReturn(Collections.<VirtualiseringsInfoType>emptyList());
-    TakCacheLog takCacheLog = takCache.refresh();
-    assertEquals(0, takCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_1).size());
-    assertEquals(0, takCache.getRoutingInfo(NAMNRYMD_1, RECEIVER_2).size());
+        .thenReturn(Collections.emptyList());
+    takCache.refresh();
+    assertEquals(0, takCache.getVagvalCache().getRoutingInfo(NAMNRYMD_1, RECEIVER_1).size());
+    assertEquals(0, takCache.getVagvalCache().getRoutingInfo(NAMNRYMD_1, RECEIVER_2).size());
   }
 
   @Test
-  public void noBehorighetFromTakShouldGiveBehorighetFalseTest() throws Exception {
+  void noBehorighetFromTakShouldGiveBehorighetFalseTest() throws Exception {
     Mockito.when(takService.getBehorigheter())
-        .thenReturn(Collections.<AnropsBehorighetsInfoType>emptyList());
-    TakCacheLog takCacheLog = takCache.refresh();
-    assertFalse(takCache.isAuthorized(SENDER_1, NAMNRYMD_1, RECEIVER_1));
+        .thenReturn(Collections.emptyList());
+    takCache.refresh();
+    assertFalse(takCache.getBehorigeterCache().isAuthorized(SENDER_1, NAMNRYMD_1, RECEIVER_1));
   }
 
   @Test
-  public void noContactWithTjanstekatalogenAlwaysReultsInLocalCacheIsRead()
+  void noContactWithTjanstekatalogenAlwaysResultsInLocalCacheIsRead()
       throws Exception {
 
     takCache.setLocalTakCacheFileName(getLocalCacheResource());
 
-    Mockito.when(takService.getVirtualiseringar())
+    Mockito.lenient().when(takService.getVirtualiseringar())
         .thenThrow(new TakServiceException(new Exception("TEST: Mock-exception on call to takService.getVirtualiseringar() (for cache fallback)")));
-    Mockito.when(takService.getBehorigheter())
+    Mockito.lenient().when(takService.getBehorigheter())
         .thenThrow(new TakServiceException(new Exception("TEST: Mock-exception on call to takService.getBehorigheter() (for cache fallback)")));
 
     TakCacheLog takCacheLog = takCache.refresh();
@@ -198,13 +172,13 @@ public class TakCacheTest {
   }
 
   @Test
-  public void emptyAnswerFromTjanstekatalogenAlwaysReultsInLocalCacheIsRead()
+  void emptyAnswerFromTjanstekatalogenAlwaysResultsInLocalCacheIsRead()
       throws Exception {
 
     takCache.setLocalTakCacheFileName(getLocalCacheResource());
 
-    Mockito.when(takService.getVirtualiseringar()).thenReturn(new ArrayList<>());
-    Mockito.when(takService.getBehorigheter()).thenReturn(new ArrayList<>());
+    Mockito.lenient().when(takService.getVirtualiseringar()).thenReturn(new ArrayList<>());
+    Mockito.lenient().when(takService.getBehorigheter()).thenReturn(new ArrayList<>());
 
     TakCacheLog takCacheLog = takCache.refresh();
 
@@ -216,7 +190,7 @@ public class TakCacheTest {
   }
 
   @Test
-  public void emptyBehorigheterFromTjanstekatalogenAlwaysReultsInLocalCacheIsRead()
+  void emptyBehorigheterFromTjanstekatalogenAlwaysResultsInLocalCacheIsRead()
       throws Exception {
 
     takCache.setLocalTakCacheFileName(getLocalCacheResource());
@@ -235,17 +209,17 @@ public class TakCacheTest {
 
 
   @Test
-  public void noDataAfterFilterShouldReultsInLocalCacheIsRead()
+  void noDataAfterFilterShouldResultsInLocalCacheIsRead()
       throws Exception {
 
     takCache.setLocalTakCacheFileName(getLocalCacheResource());
 
-    Mockito.when(takService.getVirtualiseringar())
+    Mockito.lenient().when(takService.getVirtualiseringar())
         .thenReturn(VagvalSchemasTestListsUtil.getStaticVagvalList());
-    Mockito.when(takService.getBehorigheter())
+    Mockito.lenient().when(takService.getBehorigheter())
         .thenReturn(VagvalSchemasTestListsUtil.getStaticBehorighetList());
 
-    TakCacheLog takCacheLog = takCache.refresh(Arrays.asList("NamespaceNoMatch"));
+    TakCacheLog takCacheLog = takCache.refresh(List.of("NamespaceNoMatch"));
 
     assertFalse(takCacheLog.isRefreshSuccessful());
     assertEquals(RESTORED_FROM_LOCAL_CACHE, takCacheLog.getRefreshStatus());
@@ -255,33 +229,31 @@ public class TakCacheTest {
   }
 
   @Test
-  public void contactWithTjanstekatalogenAlwaysReultsInLocalCacheIsUpdated()
+  void contactWithTjanstekatalogenAlwaysResultsInLocalCacheIsUpdated()
       throws Exception {
 
     mockTakServiceDefaultValues();
 
-    String cachefileName = String
-        .format("%s/localcache-test.xml", testFolder.getRoot().getPath());
+    String cachefileName = testFolder.resolve("localcache-test.xml").toString();
     takCache.setLocalTakCacheFileName(cachefileName);
 
     TakCacheLog takCacheLog = takCache.refresh();
 
     assertTrue(takCacheLog.isRefreshSuccessful());
     assertEquals(REFRESH_OK, takCacheLog.getRefreshStatus());
-    XMLAssert.assertXpathExists("/persistentCache/virtualiseringsInfo",
-        new InputSource(new FileReader(cachefileName)));
-    XMLAssert.assertXpathExists("/persistentCache/anropsBehorighetsInfo",
-        new InputSource(new FileReader(cachefileName)));
+    String xmlContent = java.nio.file.Files.readString(testFolder.resolve("localcache-test.xml"));
+    XmlAssert xmlAssert = XmlAssert.assertThat(xmlContent);
+    xmlAssert.hasXPath("/persistentCache/virtualiseringsInfo");
+    xmlAssert.hasXPath("/persistentCache/anropsBehorighetsInfo");
   }
 
   @Test
-  public void LocalCacheIsUpdated()
+  void LocalCacheIsUpdated()
       throws Exception {
 
     mockTakServiceDefaultValues();
 
-    String cachefileName = String
-        .format("%s/localcache-test-2.xml", testFolder.getRoot().getPath());
+    String cachefileName = testFolder.resolve("localcache-test-2.xml").toString();
     vagvalCache.setLocalTakCacheFileName(cachefileName);
     behorighetCache.setLocalTakCacheFileName(cachefileName);
 
@@ -293,14 +265,14 @@ public class TakCacheTest {
     assertTrue(takCacheLog.isRefreshSuccessful());
     assertEquals(REFRESH_OK, takCacheLog.getRefreshStatus());
 
-    XMLAssert.assertXpathExists("/persistentCache/anropsBehorighetsInfo",
-        new InputSource(new FileReader(cachefileName)));
-    XMLAssert.assertXpathExists("/persistentCache/virtualiseringsInfo",
-        new InputSource(new FileReader(cachefileName)));
+    String xmlContent = java.nio.file.Files.readString(testFolder.resolve("localcache-test-2.xml"));
+    XmlAssert xmlAssert = XmlAssert.assertThat(xmlContent);
+    xmlAssert.hasXPath("/persistentCache/anropsBehorighetsInfo");
+    xmlAssert.hasXPath("/persistentCache/virtualiseringsInfo");
   }
 
   @Test
-  public void ifExistingCacheExistItShopuldBeUsedIfRefreshFailes()
+  void ifExistingCacheExistItShouldBeUsedIfRefreshFails()
       throws Exception {
 
     mockTakServiceDefaultValues();
@@ -312,7 +284,7 @@ public class TakCacheTest {
     assertEquals(5, takCacheLog.getNumberVagval());
 
     Mockito.when(takService.getVirtualiseringar())
-        .thenThrow(new TakServiceException(new Exception("TEST: Mock-exception on call to takService.getVirtualiseringar() (for cache fallback)"))); ;
+        .thenThrow(new TakServiceException(new Exception("TEST: Mock-exception on call to takService.getVirtualiseringar() (for cache fallback)")));
 
     takCacheLog = takCache.refresh();
 
@@ -323,13 +295,13 @@ public class TakCacheTest {
   }
 
   private String getLocalCacheResource() {
-    return TakCacheTest.class.getClassLoader().getResource("tklocalcache-test.xml").getFile();
+    return Objects.requireNonNull(TakCacheTest.class.getClassLoader().getResource("tklocalcache-test.xml")).getFile();
   }
 
   private void mockTakServiceDefaultValues() throws TakServiceException {
-    Mockito.when(takService.getBehorigheter())
+    Mockito.lenient().when(takService.getBehorigheter())
         .thenReturn(VagvalSchemasTestListsUtil.getStaticBehorighetList());
-    Mockito.when(takService.getVirtualiseringar())
+    Mockito.lenient().when(takService.getVirtualiseringar())
         .thenReturn(VagvalSchemasTestListsUtil.getStaticVagvalList());
   }
 }
