@@ -1,19 +1,16 @@
 package se.skltp.takcache.vagval;
 
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import org.junit.jupiter.api.Test;
 import se.skltp.tak.vagvalsinfo.wsdl.v2.VirtualiseringsInfoType;
 import se.skltp.takcache.exceptions.RoutingException;
 import se.skltp.takcache.exceptions.RoutingFailReason;
 
 import java.util.ArrayList;
 
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.*;
 import static se.skltp.takcache.util.VagvalSchemasTestUtil.*;
 
-public class VagvalHandlerTest {
+class VagvalHandlerTest {
     private static final String ADDRESS_1 = "address-1";
     private static final String ADDRESS_2 = "address-2";
     private static final String RIV20 = "RIVTABP20";
@@ -23,11 +20,9 @@ public class VagvalHandlerTest {
     private static final String RECEIVER_1 = "receiver-1";
     private static final String RECEIVER_2 = "receiver-2";
 
-    @Rule
-    public ExpectedException thrown = ExpectedException.none();
 
     @Test
-    public void testRoutingOnRivVersions() throws Exception {
+    void testRoutingOnRivVersions() throws Exception {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV20, NAMNRYMD_1, RECEIVER_1));
@@ -40,7 +35,7 @@ public class VagvalHandlerTest {
 
 
     @Test
-    public void testRoutingOnNameSpace() throws Exception {
+    void testRoutingOnNameSpace() throws Exception {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1));
@@ -52,7 +47,7 @@ public class VagvalHandlerTest {
     }
 
     @Test
-    public void testRoutingOnReceiver() throws Exception {
+    void testRoutingOnReceiver() throws Exception {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1));
@@ -64,63 +59,63 @@ public class VagvalHandlerTest {
     }
 
     @Test
-    public void testNoMatch() throws Exception {
+    void testNoMatch() {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1));
 
-        thrown.expect(RoutingException.class);
-        thrown.expect(hasProperty("failReason", is(RoutingFailReason.NO_MATCH)));
-
         VagvalHandler vagvalHandler = new VagvalHandler(routing);
-        vagvalHandler.getRoutingAddress(NAMNRYMD_1, RECEIVER_2, RIV21);
+        RoutingException exception = assertThrows(RoutingException.class, () ->
+            vagvalHandler.getRoutingAddress(NAMNRYMD_1, RECEIVER_2, RIV21)
+        );
+        assertEquals(RoutingFailReason.NO_MATCH, exception.getFailReason());
     }
 
     @Test
-    public void testNoMatchingRivVersion() throws Exception {
+    void testNoMatchingRivVersion() {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1));
         routing.add(createRouting(ADDRESS_2, RIV21, NAMNRYMD_1, RECEIVER_2));
 
-        thrown.expect(RoutingException.class);
-        thrown.expectMessage(containsString("riv-profil"));
-        thrown.expect(hasProperty("failReason", is(RoutingFailReason.NO_MATCHING_RIV_PROFILE)));
-
         VagvalHandler vagvalHandler = new VagvalHandler(routing);
-        vagvalHandler.getRoutingAddress(NAMNRYMD_1, RECEIVER_1, RIV20);
+        RoutingException exception = assertThrows(RoutingException.class, () ->
+            vagvalHandler.getRoutingAddress(NAMNRYMD_1, RECEIVER_1, RIV20)
+        );
+        assertTrue(exception.getMessage().contains("riv-profil"));
+        assertEquals(RoutingFailReason.NO_MATCHING_RIV_PROFILE, exception.getFailReason());
     }
 
     @Test
-    public void testMultipleMatches() throws Exception {
+    void testMultipleMatches() {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1));
         routing.add(createRouting(ADDRESS_2, RIV21, NAMNRYMD_1, RECEIVER_1));
 
-        thrown.expect(RoutingException.class);
-        thrown.expect(hasProperty("failReason", is(RoutingFailReason.MULTIPLE_MATCHES)));
-
         VagvalHandler vagvalHandler = new VagvalHandler(routing);
-        vagvalHandler.getRoutingAddress(NAMNRYMD_1, RECEIVER_1, RIV21);
+        RoutingException exception = assertThrows(RoutingException.class, () ->
+            vagvalHandler.getRoutingAddress(NAMNRYMD_1, RECEIVER_1, RIV21)
+        );
+        assertEquals(RoutingFailReason.MULTIPLE_MATCHES, exception.getFailReason());
     }
 
     @Test
-    public void testNoMatchOnValidDates() throws Exception {
+    void testNoMatchOnValidDates() {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1, getRelativeDate(TWO_HOURS_AGO), getRelativeDate(AN_HOUR_AGO)));
         routing.add(createRouting(ADDRESS_2, RIV21, NAMNRYMD_1, RECEIVER_1, getRelativeDate(IN_ONE_HOUR), getRelativeDate(IN_TEN_YEARS)));
 
-        thrown.expect(RoutingException.class);
-        thrown.expect(hasProperty("failReason", is(RoutingFailReason.NO_MATCH)));
-
         VagvalHandler vagvalHandler = new VagvalHandler(routing);
-        vagvalHandler.getRoutingAddress(NAMNRYMD_1, RECEIVER_1, RIV21);
+        RoutingException exception = assertThrows(RoutingException.class, () ->
+            vagvalHandler.getRoutingAddress(NAMNRYMD_1, RECEIVER_1, RIV21)
+        );
+        assertEquals(RoutingFailReason.NO_MATCH, exception.getFailReason());
     }
 
     @Test
-    public void testGetRoutingProfiles() throws Exception {
+    void testGetRoutingProfiles() {
 
         ArrayList<VirtualiseringsInfoType> routing = new ArrayList<>();
         routing.add(createRouting(ADDRESS_1, RIV21, NAMNRYMD_1, RECEIVER_1, getRelativeDate(TWO_HOURS_AGO), getRelativeDate(AN_HOUR_AGO)));
@@ -132,7 +127,7 @@ public class VagvalHandlerTest {
         VagvalHandler vagvalHandler = new VagvalHandler(routing);
         assertEquals( 0, vagvalHandler.getRoutingRivProfiles(NAMNRYMD_1, RECEIVER_1).size());
         assertEquals( 1, vagvalHandler.getRoutingRivProfiles(NAMNRYMD_1, RECEIVER_2).size());
-        assertEquals( RIV21, vagvalHandler.getRoutingRivProfiles(NAMNRYMD_1, RECEIVER_2).get(0));
+        assertEquals( RIV21, vagvalHandler.getRoutingRivProfiles(NAMNRYMD_1, RECEIVER_2).getFirst());
         assertEquals( 2, vagvalHandler.getRoutingRivProfiles(NAMNRYMD_2, RECEIVER_2).size());
     }
 
